examples/test/testpolicy18736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18736
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key28: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value22
          key30: value20
          key19: value20
      podSelector:
        matchLabels:
          key31: value5
          key38: value12
